--- a/css/style.css
+++ b/css/style.css
@@ -48,9 +48,10 @@ a.typewrite
 /*About strat*/
 .social-icon i {
     border: 2px solid #909090;
-    padding: 8px 18px;
+    padding: 11px 14px;
     border-radius: 50%;
     color: #a99a9a;
+    margin:4px;
 }
 .social-icon i:hover {
     color: red;
